--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@tanstack/react-query": "^4.10.1",
+    "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "next": "12.3.1",
-    "next-redux-wrapper": "^8.0.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.4",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
