--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.10.1",
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
