--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.4",
     "react-transition-group": "^4.4.5",
+    "react-type-animation": "^2.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0"
   },
