--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-transition-group": "^4.4.5",
     "react-type-animation": "^2.1.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
