--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
